Version 1.5 (??/??/????) 
  * LWB: Atomic tasks have been enhanced so that an icon can be embedded within the task
    to help in user understandability of a net.
  * LWB: Enhanced the editor so it is now possible to change the ordering of task variables,
    net variales, and task parameter queries.
  * LWB: Enhaned the editor to include a convenience dialog that allows the rapid construction
    of decompositions for atomic tasks along with matching variables and parameters by
    simply choosing a number of net variables to supply and receive data. This can only
    be done on atomic tasks with no decompositions.
  * LWB: Fixed a bug where the initial values of net local variables were being double-quoted 
    at engine export time. This is especially problematic for initial values of complex-type 
    variables. 
  * LWB: Fixed a bug where the deletion of a variable in one task would cause the deletion of 
    XQueries in unrelated tasks whose decompositions contained equivalent variables to the 
    one deleted.
  * LWB: Fixed a bug where the Net Variable dialog was incorectly attempting to validate the 
    initial values of local net variables when the dialog itself was only partially 
    initialised in preparation for display.
  * LWB: Fixed a bug where the variable expression was missing a leading "/" character when
    pressing the "XPath expression" button on the Flow Details dialog for
    tasks with OR and XOR splits.
  * LWB: Upgraded editor to use JGraph 5.9.2.2 and Proguard 3.8.
  * LWB: Fixed a bug where cancelling a save-as action on a specification was being ignored,
    and the file being saved regardless.
  * LWB: Fixed a bug where you could not drag an outgoing flow from a split decorator port.
  * MJF: Fixed a bug where null pointer exceptions would occasionally happen when changing
    the XPath expression of flows from XOR/OR splits on a variable name change.